Fix jumpy transition animation

--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -88,6 +88,7 @@
 }
 
 .back-button-label {
+  cursor: pointer;
   padding-top: 1px;
   transform: translateX(20px);
 }
